--- a/views/index.ejs
+++ b/views/index.ejs
@@ -207,8 +207,10 @@
     }
 
     async function loadDetailModal (index) {
+        console.log("list[index]",list[index]);
 
         list[index].book_mark = await post_bookmark(list[index].id);
+
         const data = {
             id : list[index] && list[index].id ? list[index].id : 0,
             poster_check : list[index] && list[index].poster_check ? list[index].poster_check : false,
@@ -266,13 +268,12 @@
     }
     async function post_bookmark(id){
 
-        try {
+        try{
             const findOneData = await bookMark_FindOne(id);
-            console.log("findOneData",findOneData);
 
             return findOneData
-        } catch(e){
-
+            console.log("findOneData",findOneData);
+        }catch(e){
             return false;
             console.log(e);
         }
@@ -289,6 +290,8 @@
 
             if (result) {
                 list[index].book_mark = false;
+                modalCloase();
+                loadDetailModal(index);
                 bookmarkDom.style.fill = '#eee';
             } else {
 
@@ -302,6 +305,8 @@
 
             if (result) {
                 list[index].book_mark = true;
+                modalCloase();
+                loadDetailModal(index);
                 bookmarkDom.style.fill = '#f5cd00';
             } else {
 
