이런저런 수정

--- a/views/chatRoom.ejs
+++ b/views/chatRoom.ejs
@@ -25,7 +25,7 @@
     const user_id = '<%= user_id %>'
     const nickname = '<%= nickname %>'
     const room_id = '<%= room_id %>'
-    const categery = '<%= category %>'
+    const category = '<%= category %>'
     const socket = io ('/');
     let memberInfoList;
 </script>
