--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,7 +16,7 @@
             <input type="text" id="userid" placeholder="아이디" >
             <input type="password" id="pw" placeholder="비밀번호" >
             <button type="button" onclick="userSignin()" class="login">로그인</button>
-            <button onclick="authKaKao()" class="Klogin">카카오톡으로 로그인</button> <br/>
+            <button type="button" onclick="authKaKao()" class="Klogin">카카오톡으로 로그인</button> <br/>
             <!-- <div class="remember-me">
                 <input type="checkbox" id="remember" checked>
                 <label for="remember">로그인 상태 유지</label>
