사소한 수정 및  아이디 찾기 페이지 구현

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -36,7 +36,7 @@
                 </div>
                 <div class="info-set email">
                     <label for="email">이메일</label>    
-                    <input type="email" name="email" id="email" placeholder="임시 비밀번호를 받을 email"><br />
+                    <input type="email" name="email" id="email" placeholder="비밀번호 분실 시 확인용 email"><br />
                     <div id="emtx"></div>
                 </div>
                 <div class="info-set name">
