--- a/views/index.ejs
+++ b/views/index.ejs
@@ -39,7 +39,7 @@
             <ul class="header-profile-tab">
                 <li id="mobileView"><a href="/post/new">게시판 등록</a> </li>
                 <li><a href="/profile">프로필</a> </li>
-                <li><button type="button" onclick="">로그아웃</button></li>
+                <li><button type="button" onclick="userLogOut()">로그아웃</button></li>
             </ul>
         </div>
     </header>
