230913 board-bookmark 동시삭제

--- a/views/postNew.ejs
+++ b/views/postNew.ejs
@@ -38,7 +38,8 @@
                         <option value="sports">sports</option>
                         <option value="e-sports">e-sports</option>
                     </select>
-                    <button id="boardCreateButton" class="board-button" type="button" onclick="boardCreate()">게시판 만들기</button>
+                    <!-- <input type="button" id="boardCreateButton" class="board-button" value="게시판 만들기" onclick="boardCreate(); this.onclick='';"/> -->
+                    <button id="boardCreateButton" class="board-button" type="button" onclick="boardCreate(); this.onclick='';" >게시판 만들기</button>
                     <button id="backButton" class="board-button" type="button" onclick="histryBack()">뒤로가기</button>
                 </div>
             </form>
