--- a/views/index.ejs
+++ b/views/index.ejs
@@ -206,7 +206,7 @@
             content: list[index] && list[index].content ? list[index].content : '',
             title :  list[index] && list[index].title ? list[index].title : '',
             views : list[index] && list[index].views ? list[index].views : 0,
-            event_time : list[index] && list[index].event_time.split('T')[0]? list[index].event_time.split('T')[0] : '',
+            event_time : list[index] && list[index].event_time ? list[index].event_time.split('T')[0] : '',
             book_mark : list[index] && list[index].book_mark ? list[index].book_mark : false
         }
 
