--- a/public/css/board/board_list.css
+++ b/public/css/board/board_list.css
@@ -31,7 +31,10 @@
     border : solid #ccc 3px;
     color: rgb(255, 255, 255);
 }
+.board-card:hover .roomImg > .img-box  {
+    border: 3px solid rgb(227, 135, 77); 
 
+}
 .board-card:hover .roomImg > img {
     filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(320deg) brightness(104%) contrast(101%);
 
@@ -67,7 +70,7 @@
 
 .board-card > .boardInfo >  .boxTitle {
     font-size: 1.5em; white-space: nowrap; color: rgb(255, 255, 255);
-    overflow: hidden; text-overflow: ellipsis;
+    overflow: hidden; text-overflow: ellipsis; text-align: left;
 }
 
 .board-card > .boardInfo >  .boxCreateAt {
@@ -77,7 +80,7 @@
 .board-card > .boardInfo >  .boxViews {
     width: 100%; min-height: 20px;    
     display: flex;  align-items: center;
-    color: rgb(255, 255, 255);  
+    color: rgb(255, 255, 255);  text-align: left;
     font-size: 0.65em;
 }
 .board-card > .boardInfo >  .boxViews > img {
