--- a/views/postedit.ejs
+++ b/views/postedit.ejs
@@ -34,8 +34,8 @@
                     <option value="e-sports">e-sports</option>
                 </select>
                 <button class="board-button" type="button" onclick="boardEdit1()">게시판 수정</button>
-                <button id="boardDeleteButton" class="board-button" type="button" onclick="boardDelete1()">게시판 삭제</button>
-                <button id="backButton" class="board-button" type="button" onclick="back()">뒤로가기</button>
+                <button id="boardDeleteButton" class="board-button" type="button" onclick="boardDelete1(); this.onclick='';">게시판 삭제</button>
+                <button id="backButton" class="board-button" type="button" onclick="histryBack()">뒤로가기</button>
             </div>
         </form>
     </div>
