--- a/public/css/profileEdit.css
+++ b/public/css/profileEdit.css
@@ -40,6 +40,17 @@ body {
 .top-info {
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 25px;
+    font-weight: bold;
+}
+
+.top-info img {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    object-fit: cover;
 }
 
 /* 유저 정보 상단 영역 */
@@ -111,6 +122,7 @@ body {
     border: none;
     border-radius: 3px;
     cursor: pointer;
+    margin-bottom: 10px;
 }
 
 .cancel_btn button {
