--- a/views/profileEdit.ejs
+++ b/views/profileEdit.ejs
@@ -29,62 +29,75 @@
         </div>
         <hr />
 
-        <form name="edit-profile">
+        <form name="edit-profile-image" enctype="multipart/form-data">
             <input type="hidden" id="id" value="<%= user.user_id %>">
             <!-- 상단 프로필 사진 영역 -->
             <div class="top-info">
-                <img src="" alt="프로필사진">
+                <label for="profileImage">
+                    <img src="<%= profileImage %>" alt="프로필사진">
+                </label>
                 <br />
-            </div>
-            <!-- 중앙 유저 정보 영역 -->
-            <div class="center-info">        
-            <!-- 유저 정보 상단 영역 -->
-            <div class="center-top-info">
-                <div class="info-set">
-                    <label for="userName">이름</label>
-                    <input type="text" id="userName" value="<%= user.user_name %>" readonly />   
-                </div>
-                <div class="info-set">
-                    <label for="loginId">아이디</label>
-                    <input type="text" id="loginId" value="<%= user.login_id %>" readonly />
-                </div>
-                <div class="info-set">
-                    <label for="gender">성별</label>
-                    <input type="text" id="gender" value="<%= user.gender %>" readonly>
-                </div>
-                <div class="info-set">
-                    <label for="nickName">닉네임</label>
-                    <input type="text" id="nickName" value="<%= user.nickname %>">
-                </div>
-                <div class="info-set">
-                    <label for="birth">생년월일</label>
-                    <input type="text" id="birth" value="<%= user.birth %>" readonly>
-                </div>
-                <div class="info-set">
-                    <label for="email">이메일</label>
-                    <input type="email" id="email" value="<%= user.email %>">
-                </div>
-            </div>
-            <!-- 유저 정보 하단 영역 -->
-            <div class="center-bottom-info">
-                <div class="info-cate">
-                    <label for="categoryA">선호 카테고리</label>
-                    <input type="text" id="categoryA">
-                </div>
-                <div class="info-cate">
-                    <label for="categoryB">비선호 카테고리</label>
-                    <input type="text" id="categoryB">
-                </div>
+                <input type="file" id="profileImage" name="profileImage" accept="image/*">
             </div>
             <!-- 저장 버튼 -->
             <div class="btn">
                 <div class="save_btn">
-                    <button type="button" onclick="edit()">저장하기</button>
-                </div>
-                <div class="cancel_btn">
-                    <button type="button" onclick="cancel()">뒤로가기</button>
+                    <button type="button" onclick="editProfileImage()">프로필 이미지 저장</button>
                 </div>
             </div>
+        </form>
+
+        <form name="edit-profile">
+            <input type="hidden" id="id" value="<%= user.user_id %>">
+            <!-- 중앙 유저 정보 영역 -->
+            <div class="center-info">
+                <!-- 유저 정보 상단 영역 -->
+                <div class="center-top-info">
+                    <div class="info-set">
+                        <label for="userName">이름</label>
+                        <input type="text" id="userName" value="<%= user.user_name %>" readonly />
+                    </div>
+                    <div class="info-set">
+                        <label for="loginId">아이디</label>
+                        <input type="text" id="loginId" value="<%= user.login_id %>" readonly />
+                    </div>
+                    <div class="info-set">
+                        <label for="gender">성별</label>
+                        <input type="text" id="gender" value="<%= user.gender %>" readonly>
+                    </div>
+                    <div class="info-set">
+                        <label for="nickName">닉네임</label>
+                        <input type="text" id="nickName" value="<%= user.nickname %>">
+                    </div>
+                    <div class="info-set">
+                        <label for="birth">생년월일</label>
+                        <input type="text" id="birth" value="<%= user.birth %>" readonly>
+                    </div>
+                    <div class="info-set">
+                        <label for="email">이메일</label>
+                        <input type="email" id="email" value="<%= user.email %>">
+                    </div>
+                </div>
+                <!-- 유저 정보 하단 영역 -->
+                <div class="center-bottom-info">
+                    <div class="info-cate">
+                        <label for="categoryA">선호 카테고리</label>
+                        <input type="text" id="categoryA">
+                    </div>
+                    <div class="info-cate">
+                        <label for="categoryB">비선호 카테고리</label>
+                        <input type="text" id="categoryB">
+                    </div>
+                </div>
+                <!-- 저장 버튼 -->
+                <div class="btn">
+                    <div class="save_btn">
+                        <button type="button" onclick="edit()">저장하기</button>
+                    </div>
+                    <div class="cancel_btn">
+                        <button type="button" onclick="cancel()">뒤로가기</button>
+                    </div>
+                </div>
         </form>
     </div>
 </body>
