--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -26,3 +26,22 @@
     border-color: rgb(71,87,111); background-color: rgb(71,87,111);
 
 }
+#scrollby-top{
+    cursor: pointer;
+    width: 75px;
+    height: 75px;
+    bottom: 10%;
+    right: 7%;
+    position: fixed;
+    z-index: 2000;
+}
+#scrollby-top > img{
+    width: 100%;
+    height: 100%;
+    opacity: 0.7;
+}
+#scrollby-top > img:hover{
+    border: solid #ccc 3px;
+    border-radius: 50%;
+    opacity: 1;
+}
