--- a/views/findId.ejs
+++ b/views/findId.ejs
@@ -19,32 +19,39 @@
             </div>
         </div>
     </div>
-    <p>가입 시 기재한 이름과 생년월일을 입력해주세요</p>
-    <form name="findPw-form">
-        <div class="name">
-            <label for="name">이름</label>
-            <input type="text" id="name" /><br />
+    <p id="tx">가입 시 기재한 이름과 생년월일을 입력해주세요</p>
+    <form name="findId-form">
+        <div id="form">
+            <div class="name">
+                <label for="name">이름</label>
+                <input type="text" id="name" /><br />
+            </div>
+            <div class="birth">
+                <label for="birth">생년월일</label>
+                <div id="birth" class="birth_select">
+                    <select name="year" id="birth-year">
+                    </select>
+                    <select name="month" id="birth-month">
+                    </select>
+                    <select name="day" id="birth-day">
+                    </select>
+                </div>
+            </div>    
+            <div class="btn">
+                <div class="findId_btn">
+                    <button type="button" onclick="findId()">찾기</button>
+                </div>
+                <div class="cancel_btn">
+                    <button type="button" onclick="cancel()">뒤로</button>
+                </div>
+            </div>
+            <div class="result"></div>
         </div>
-        <div class="birth">
-            <label for="birth">생년월일</label>
-            <div class="birth_select">
-                <select name="year" id="birth-year">
-                </select>
-                <select name="month" id="birth-month">
-                </select>
-                <select name="day" id="birth-day">
-                </select>
-            </div>
-        </div>    
-        <div class="btn">
-            <div class="findPw_btn">
-                <button type="button" onclick="findPw()">찾기</button>
-            </div>
-            <div class="cancel_btn">
-                <button type="button" onclick="cancel()">취소</button>
-            </div>
+        <div class="resultText" hidden>
+            <div class="result2"></div>
+            <a href="/login">로그인</a>
+            <a href="/findpw">비밀번호 찾기</a>
         </div>
-        <div class="result"></div>
-    </form>
+        
 </body>
 </html>
