--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,7 +19,6 @@
             <br />
             <button type="button" onclick="userSignin()" class="login">로그인</button>
             <button type="button" onclick="authKaKao()" class="Klogin">카카오톡으로 로그인</button> <br/>
-            <button onclick="authKaKao()" class="Klogin">카카오톡으로 로그인</button> <br />
             <br />
             <!-- <div class="remember-me">
                 <input type="checkbox" id="remember" checked>
@@ -28,7 +27,9 @@
             <div class="signup">
                 <a href="/register">계정 등록하기</a>
             </div>
-            <a href="/findpw" class="findpw">비밀번호를 잊으셨나요?</a>
+            <div class="pwa">
+                <a href="/findid" class="findpw">아이디 찾기</a> | <a href="/findpw" class="findpw">비밀번호 찾기</a>
+            </div>    
         </form>
     </div>
 </body>
