--- a/views/pwEdit.ejs
+++ b/views/pwEdit.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"></script>
     <script src="/public/js/pwEdit.js" defer></script>
     <title>비밀번호 변경</title>
     <link rel="stylesheet" href="/public/css/pwEdit.css">
@@ -25,15 +26,14 @@
         <div class="center-info">
             <div class="Cpw">
                 <label for="Cpw">현재 비밀번호</label>
-                <input type="password" id="Cpw"><br />
+                <input type="password" id="Cpw" placeholder="현재 비밀번호"><br />
             </div>
             <div class="pw_edit">
                 <label for="pw_edit">변경할 비밀번호</label>
-                <input type="password" id="pw_edit"><br />
+                <input type="password" oninput="pwCheck()" id="pw_edit" placeholder="변경할 비밀번호"><br />
             </div>
             <div class="pw_edit2">
-                <label for="pw_edit2">비밀번호 확인</label>
-                <input type="password" id="pw_edit2">
+                <input type="password" oninput="pwCheck()" id="pw_edit2" placeholder="비밀번호 확인">
             </div>
             <div class="btn">
                 <div class="edit_btn">
@@ -43,6 +43,7 @@
                     <button type="button" onclick="cancel()">취소</button>
                 </div>
             </div>
+            <div id="pwtx"></div>
             <div class="result"></div>
         </div>
     </form>
