내림차순 정렬

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -183,6 +183,22 @@
         }
     }
 
+    function goTop(){
+        window.addEventListener('scroll', () => {
+            if ( window.scrollY >100) {
+            document.getElementById('scrollby-top').style.display = "block";
+            document.getElementById('scrollby-top').addEventListener('click',()=>{
+                    window.scrollTo({
+                        top: 0,
+                        left: 0,
+                        behavior: 'smooth'
+                    });
+                })
+            } else {
+                document.getElementById('scrollby-top').style.display = "none";
+            }
+        });
+    }
     async function chatRoomJoin(board_id){
             const res = await axios({
                 method: "post",
