--- a/public/css/profileEdit.css
+++ b/public/css/profileEdit.css
@@ -53,6 +53,16 @@ body {
     object-fit: cover;
 }
 
+.top-info input {
+    display: inline-block;
+    height: 40px;
+    padding: 0 10px;
+    vertical-align: middle;
+    border: 1px solid #dddddd;
+    width: 78%;
+    color: #999999;
+}
+
 /* 유저 정보 상단 영역 */
 .center-top-info {
     display: flex;
