회원가입 사소한 수정

--- a/public/css/pwEdit.css
+++ b/public/css/pwEdit.css
@@ -104,3 +104,18 @@ body {
         opacity: 1;
     }
 }
+
+/* 메세지 스타일 */
+.red {
+    color: red;
+    font-size : 16px;
+    text-align : start;
+    font-weight : bold;
+}
+
+.green {
+    color: green;
+    font-size: 16px;
+    text-align : start;
+    font-weight : bold;
+}
