--- a/views/chatRoom.ejs
+++ b/views/chatRoom.ejs
@@ -7,30 +7,38 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/public/js/socket/system_socket.js" defer></script>
+    <script src="/public/js/socket/chat_socket.js" defer></script>
     <link rel="stylesheet" href="/public/css/chat/chatRoom.css">
 </head>
 <body>
-    <body>
-        <div id="chat-box">
-            <div id="chat-header">채팅방</div>
-            <ul id="message-list"></ul>
-            <div id="user-input">
-                <input type="text" id="message-input" placeholder="메시지 입력">
-                <button id="send-button" onclick="msgSend()">보내기</button>
-            </div>
+    <div id="chat-box">
+        <div id="chat-header">채팅방</div>
+        <ul id="message-list"></ul>
+        <div id="user-input">
+            <input type="text" id="message-input" placeholder="메시지 입력">
+            <button id="send-button" onclick="msgSend()">보내기</button>
         </div>
-    </body>
+    </div>
+    <div id="custom-context-menu" class="custom-context-menu">
+        <ul>
+            <div id="user-nickname"></div>
+            <li id="user-info-show">유저 정보 보기</li>
+            <li id="game">게임 신청</li>
+        </ul>
+    </div>
 </body>
 <script>
     const user_id = '<%= user_id %>'
     const nickname = '<%= nickname %>'
     const room_id = '<%= room_id %>'
     const category = '<%= category %>'
-    const socket = io ('/');
+    const name_space = '/chat'
+    const socket = io (name_space);
+    let socketInfoList;
     let memberInfoList;
 </script>
 <script>
-    (async () => {
+    (async()=>{
         await memberLoad()
         await chatMsgLoad();
     })()
@@ -55,6 +63,13 @@
         return member.nickname;
     }
 
+    function socketSearch(nickname){
+        const member = socketInfoList.find((e) => e.nickname === nickname);
+        if(!member){
+            alert('유저가 접속중이지 않습니다')
+        }
+        return member.key;
+    }
 
     async function chatMsgLoad(){
         const msgs = await axios({
@@ -76,35 +91,117 @@
         // 스크롤을 아래로 이동하여 최신 메시지를 보여줍니다.
     }
 
-    function msgLiAdd(nickname,content,isMine){
+    function msgLiAdd(nickname,content,isMine,game){
         const messageList = document.getElementById('message-list');
         const li = document.createElement('li');
-        li.className = 'message';
-        // const profileImg = document.createElement('img');
-        // profileImg.src = 'profile.jpg'; // 프로필 이미지 경로
-        // profileImg.className = 'profile-img';
-        // li.appendChild(profileImg);
+        const profileImg = document.createElement('img');
+        const user = document.createElement('div');
         const userInfo = document.createElement('div');
         const messageContent = document.createElement('div');
+        li.className = 'message';
+        profileImg.className = 'profile-img';
         userInfo.className = 'user-info';
+        messageContent.className = 'message-content';
+        profileImg.src = '/public/giticon.png'; // 프로필 이미지 경로
         userInfo.textContent = nickname;
+        messageContent.textContent = content;
         if (isMine) {
-            // profileImg.style.marginRight = '0';
-            // profileImg.style.marginLeft = '10px';
+            profileImg.style.marginRight = '0';
+            profileImg.style.marginLeft = '10px';
+            profileImg.style.float = 'right';
             messageContent.style.textAlign = 'right';
             messageContent.style.backgroundColor = '#007bff';
             messageContent.style.color = '#fff';
             li.style.float = 'right';
             li.style.alignItems = 'flex-end';
             userInfo.className = 'user-info my-msg';
+        } else {
+            if(game){
+                li.onclick = (e) => {
+                    if(confirm('게임에 참여 하시겠습니까?')){
+                        socket.emit
+                    }
+                }
+            }
+            li.oncontextmenu = (e) => {
+                e.preventDefault();
+                document.getElementById('user-nickname').textContent = nickname
+                showContextMenu(e.clientX, e.clientY);
+            }
         }
-        li.appendChild(userInfo);
-        messageContent.className = 'message-content';
-        messageContent.textContent = content;
+        user.appendChild(profileImg);
+        user.appendChild(userInfo);
+        li.appendChild(user);
         li.appendChild(messageContent);
         messageList.appendChild(li);
     }
 
+    const customContextMenu = document.getElementById('custom-context-menu');
+
+    function showContextMenu(x, y) {
+        const offsetX = 10;
+        const offsetY = 10;
+        customContextMenu.style.left = x + offsetX + 'px';
+        customContextMenu.style.top = y + offsetY + 'px';
+        customContextMenu.style.display = 'block';
+    }
+
+    const menuItems = document.querySelectorAll('.custom-context-menu li');
+    menuItems.forEach((menuItem) => {
+        menuItem.addEventListener('mouseover', (e) => {
+            const selectedMenuItem = e.target;
+            const menuItemId = selectedMenuItem.id;
+            selectedMenuItem.style.backgroundColor = 'skyblue'
+        });
+        menuItem.addEventListener('mouseleave', (e) => {
+            const selectedMenuItem = e.target;
+            const menuItemId = selectedMenuItem.id;
+            selectedMenuItem.style.backgroundColor = null
+        });
+        menuItem.addEventListener('click', (e) => {
+            const selectedMenuItem = e.target;
+            const menuItemId = selectedMenuItem.id;
+            const opponent = document.getElementById('user-nickname').innerText
+            const my_socket = socketSearch(nickname);
+            const opponent_socket = socketSearch(opponent);
+            if(menuItemId === 'game'){
+                console.log('game click')
+                axios ({
+                    method: 'post',
+                    url: '/msg/send',
+                    data: {
+                        user_id,
+                        room_id,
+                        nickname,
+                        content: `${nickname}님이 ${opponent}님에게 게임 신청했습니다`,
+                        game:true
+                    }
+                }).then((msg_send) => {
+                    console.log('msg',msg_send)
+                    const info = {
+                        user1: nickname,
+                        user2: opponent,
+                        my_socket,
+                        opponent_socket,
+                        room_id
+                    }
+                    window.open(`/game?user1=${nickname}&user2=${opponent}`)
+                    socket.emit('game_open', info)
+                })
+            }
+            
+            // 여기에서 각 메뉴 항목을 클릭했을 때의 동작을 정의할 수 있습니다.
+            // 예를 들어, 메뉴 항목에 따라 다른 작업을 수행하도록 할 수 있습니다.
+            
+            // 컨텍스트 메뉴 숨기기
+            customContextMenu.style.display = 'none';
+        });
+    });
+
+    document.addEventListener('click', () => {
+        customContextMenu.style.display = 'none';
+    });
+    
     async function msgSend(){
         const msg = document.getElementById('message-input');
         if(!msg.value){
@@ -118,6 +215,7 @@
                 room_id,
                 nickname,
                 content: msg.value,
+                game:false
             }
         })
         msg.value = ''
